--- a/MaterialThemeBuilder/app/src/main/res/values/strings.xml
+++ b/MaterialThemeBuilder/app/src/main/res/values/strings.xml
@@ -111,4 +111,7 @@
     <string name="text_appearance_button_label">Button</string>
     <string name="text_appearance_caption_label">Caption</string>
     <string name="text_appearance_overline_label">Overline</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tab_title_dashboad">Dashboard</string>
 </resources>
